fix - index.php (right menu collapse) chore - test.js (type $(document).ready just once)

--- a/style.css
+++ b/style.css
@@ -182,6 +182,12 @@ li.content {
     opacity: 0.8;
 }
 
+li.rmli {
+    margin-left: 20px;
+    text-align: left;
+    list-style-image: url("https://www.netiq.com/documentation//cloudmanager2/ncm2_orch_servcons/graphics/graydot_n.png");
+}
+
 /*_________________________________IMAGES START_________________________________________________________________*/
 
 /*img {
