--- a/test.css
+++ b/test.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100%;
     margin: auto auto;
-    background: url("http://x.imagefapusercontent.com/u/kamillafasterova/6256211/1157782303/prox2_.png");
+    background: url("_");
     background-size: cover;
 }
 
